# Sim86

./: .gitignore  CMakeLists.txt
listings/part1/: my_listing_common_instructions.asm
src/: add_sub_cmp.cpp  add_sub_cmp.h  ascii_colors.h  common_instructions.cpp  common_instructions.h  decoder.cpp  decoder.h  instruction_types.inl  instructions.inl  jumps.cpp  jumps.h  main.cpp  mov.cpp  mov.h  string_builder.cpp  string_builder.h  util.h
